<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/title_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFCC80"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:id="@+id/article_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uzumaki_naruto"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="#FF5722"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/article_heading_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_orange_hokage"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="#FF5722" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_linear_layout">

        <LinearLayout
            android:id="@+id/body_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/image_alt_text"
                app:srcCompat="@drawable/naruto_hokage" />


            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:padding="10dp"
                android:text="@string/article_text" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/article_subheading_personality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/personality_title_text"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

                <TextView
                    android:id="@+id/personality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5dp"
                    android:padding="10dp"
                    android:text="@string/personality_text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/article_subheading_abilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/abilities_title_text"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

                <TextView
                    android:id="@+id/abilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5dp"
                    android:padding="10dp"
                    android:text="@string/abilities_text" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>